--- a/i18n/override/ja_JP/_includes/homepage-developer_joy-band.html
+++ b/i18n/override/ja_JP/_includes/homepage-developer_joy-band.html
@@ -1,7 +1,7 @@
 <div class="full-width-bg component homepage-content-band">
   <div class="grid-wrapper">
     <div class="width-12-12 block-content">
-      <h2>Developer Joy</h2>
+      <h2>開発者満足</h2>
     </div>
     <div class="width-7-12 width-12-12-m block-content">
       
