--- a/i18n/override/ja_JP/_includes/homepage-container_first-band.html
+++ b/i18n/override/ja_JP/_includes/homepage-container_first-band.html
@@ -1,7 +1,7 @@
 <div class="full-width-bg component homepage-content-band">
   <div class="grid-wrapper">
     <div id="container-first" class="width-12-12">
-      <h2>Container First</h2>
+      <h2>コンテナファースト</h2>
     </div>
     <div class="width-12-12 block-content">
       <p>QuarkusはアプリケーションをGraalVMとHotSpot向けに最適化します。驚くべき高速起動と、信じられないほどの低RSSメモリ（ヒープサイズだけではありません！）により、Kubernetesなどのコンテナオーケストレーションプラットフォームでほぼ瞬時にスケールアップし、高密度のメモリ使用率を実現します。コンパイル時ブートと呼ばれる手法を使用します。<a href="/vision/container-first">詳細</a></p>
