--- a/i18n/override/ja_JP/_includes/homepage-hero-band.html
+++ b/i18n/override/ja_JP/_includes/homepage-hero-band.html
@@ -2,7 +2,7 @@
   <div class="grid__item width-12-12 title-band">
     <h1>Supersonic Subatomic Java</h1>
     <p>
-        ベストオブブリード Java ライブラリと標準を元に、 OpenJDK HotSpot と GraalVM に最適化された Kubernetes ネイティブ Java スタック
+        各分野における最高の Java ライブラリと標準を元に、 OpenJDK HotSpot と GraalVM に最適化された Kubernetes ネイティブ Java スタック
       <br/><br/>
       <a href="{{site.baseurl}}/get-started/" class="button-cta">Quarkus 入門</a>
     </p>
