--- a/i18n/override/ja_JP/_includes/homepage-hero-band.html
+++ b/i18n/override/ja_JP/_includes/homepage-hero-band.html
@@ -1,25 +1,20 @@
 <div class="grid-wrapper homepage-hero-band">
-  <div class="grid__item width-12-12 title-band">
-    <h1>Supersonic Subatomic Java</h1>
-    <p>
-        各分野における最高の Java ライブラリと標準を元に、 OpenJDK HotSpot と GraalVM に最適化された Kubernetes ネイティブ Java スタック
-      <br/><br/>
-      <a href="{{site.baseurl}}/get-started/" class="button-cta">Quarkus 入門</a>
-    </p>
-  </div>
-  <div class="grid__item width-6-12 homepage-hero-band-lcontent">
-    <div class="img-wrapper">
-      <a href="{{site.baseurl}}/blog/quarkus-hackathon-winners-announced/">
-        <img src="{{site.baseurl}}/assets/images/homepage_herocallout_winners.png" class="" title="2020 Quarkus Hackathon Winners Announced">
-      </a>
+    <div class="grid__item width-3-12"></div>
+    <div class="grid__item width-6-12">
+        <img src="{{site.baseurl}}/assets/images/quarkus_logo_horizontal_rgb_reverse.svg" class="project-logo" title="Quarkus">
     </div>
-  </div>
-  <div class="grid__item width-6-12 homepage-hero-band-rcontent">
-    <p>Now Available</p>
-    <h3>Quarkus {{ site.data.versions.quarkus.version | replace: ".Final", "" }}</h3>
-    <a href="{{ site.data.versions.quarkus.announce }}">詳細情報</a>
-  </div>
-  <div class="grid__item width-12-12 homepage-hero-band-scroll">
-    <a href="#" class="scroll-down" address="true"></a>   
-  </div>
+    <div class="grid__item width-3-12"></div>
+    <div class="grid__item width-6-12 homepage-hero-band-lcontent">
+        <h2>Supersonic Subatomic Java</h2>
+        <p>各分野における最高の Java ライブラリと標準を元に、 OpenJDK HotSpot と GraalVM に最適化された Kubernetes ネイティブ Java スタック</p>
+        <a href="{{site.baseurl}}/get-started/" class="button-cta">Quarkus 入門</a>
+    </div>
+    <div class="grid__item width-6-12 homepage-hero-band-rcontent">
+        <p>Now Available</p>
+        <h3>Quarkus {{ site.data.versions.quarkus.version | replace: ".Final", "" }}</h3>
+        <a href="{{ site.data.versions.quarkus.announce }}">詳細情報</a>
+    </div>
+    <div class="grid__item width-12-12 homepage-hero-band-scroll">
+        <a href="#" class="scroll-down" address="true"></a>
+    </div>
 </div>
