Update override files to keep up to date

--- a/l10n/override/ja_JP/_includes/feedback-community-band.html
+++ b/l10n/override/ja_JP/_includes/feedback-community-band.html
@@ -2,10 +2,15 @@
   <div class="grid-wrapper">
     <div class="grid__item width-6-12 width-12-12-m">
       <h3>フィードバックとヘルプ</h3>
-      <p>Quarkusプロジェクトチームにこちらから連絡出来ます：</p>
+      <p>利用方法については、以下でお問い合わせ頂くことをお勧めします：</p>
       <ul>
-        <li><a href="https://quarkusio.zulipchat.com" target="_blank">Zulip</a>によるチャット</li>
+        <li><a href="https://stackoverflow.com/questions/tagged/quarkus">Stack Overflow (<code>quarkus</code>タグ)で質問</a></li>
+        <li><a href="https://quarkusio.zulipchat.com" target="_blank">Zulip</a>によるチャット (<code>#users</code> stream)</li>
+      </ul>
+      <p>Quarkusの開発に関する質問は、以下をご利用下さい：</p>
+      <ul>
         <li><a href="https://groups.google.com/d/forum/quarkus-dev" target="_blank">quarkus-dev Google Groups</a></li>
+        <li><a href="https://quarkusio.zulipchat.com" target="_blank">Zulip</a>によるチャット (<code>#dev</code> stream)</li>
       </ul>
       <p>あなたの参加は大歓迎です！躊躇わずに参加して下さい。</p>
     </div>
