--- a/l10n/override/ja_JP/_includes/support-help-band.html
+++ b/l10n/override/ja_JP/_includes/support-help-band.html
@@ -19,7 +19,7 @@
   </div>
   <div class="width-3-12 width-12-12-m help-block">
     <img src="{{site.baseurl}}/assets/images/community/icon-email.png">
-    <h4>メーリングリスト</h4>
-    <p>メーリングリストで質問することも可能です。<a href="mailto:quarkus-dev+subscribe@googlegroups.com">email</a>するか、<a href="https://groups.google.com/d/forum/quarkus-dev">Google Groupsページ</a>にアクセスしてグループに参加してください。</p>
+    <h4>開発メーリングリスト</h4>
+    <p>Quarkusの開発の議論専用のメーリングリストもあります。<a href="mailto:quarkus-dev+subscribe@googlegroups.com">email</a>するか、<a href="https://groups.google.com/d/forum/quarkus-dev">Google Groupsページ</a>にアクセスしてグループに参加してください。</p>
   </div>
 </div>
