Update feedback-community-band to catch up

--- a/l10n/override/ja_JP/_includes/feedback-community-band.html
+++ b/l10n/override/ja_JP/_includes/feedback-community-band.html
@@ -1,6 +1,6 @@
 <div class="full-width-bg component alt-background">
   <div class="grid-wrapper">
-    <div class="grid__item width-6-12 width-12-12-m">
+      <div class="grid__item width-6-12 width-12-12-m feedback-help">
       <h3>フィードバックとヘルプ</h3>
       <p>利用方法については、以下でお問い合わせ頂くことをお勧めします：</p>
       <ul>
