--- a/l10n/override/ja_JP/_layouts/guides-index.html
+++ b/l10n/override/ja_JP/_layouts/guides-index.html
@@ -47,7 +47,7 @@ layout: base
   </div>
 
   <div class="grid__item width-2-12 width-12-12-m cat-list-label">
-    <h3>カテゴリから表示:</h3>
+    <h3>カテゴリ:</h3>
   </div>
   <div class="grid__item width-10-12 width-12-12-m guide-categories">
     <ul>
