--- a/l10n/override/ja_JP/_includes/homepage-hero-band.html
+++ b/l10n/override/ja_JP/_includes/homepage-hero-band.html
@@ -1,6 +1,6 @@
 <div class="grid-wrapper homepage-hero-band">
   <div class="grid__item width-3-12"></div>
-  <div class="grid__item width-6-12">
+  <div class="grid__item width-6-12 text-center">
     <img src="{{site.baseurl}}/assets/images/quarkus_logo_horizontal_rgb_reverse.svg" class="project-logo" title="Quarkus">
     <h2>Supersonic Subatomic Java</h2>
       <p>各分野における最高の Java ライブラリと標準を元に、 OpenJDK HotSpot と GraalVM に最適化された Kubernetes ネイティブ Java スタック</p>
