--- a/l10n/override/ja_JP/_includes/homepage-imperative_and_reactive-band.html
+++ b/l10n/override/ja_JP/_includes/homepage-imperative_and_reactive-band.html
@@ -4,7 +4,7 @@
       <h2>命令型とリアクティブ型の統合</h2>
     </div>
     <div class="width-12-12 width-12-12-m">
-      <p>アプリケーション開発時に、慣れ親しんだ命令型コードと、ノンブロッキングリアクティブ型コードを組み合わせることが出来ます。
+      <p>アプリケーション開発時に、慣れ親しんだ命令型コードと、グリアクティブ型コードを組み合わせることが出来ます。
       <a href="/vision/continuum">詳細</a>.</p>
     </div>
     <div class="width-12-12 width-12-12-m">
@@ -25,13 +25,12 @@ public String hello() {
         <div class="width-6-12 code-item">
           <div class="code-label">リアクティブ型</div>
           <div class="code-wrapper">
-            <pre class="highlight"><code>@Inject @Channel("kafka")
-Publisher&lt;String&gt; reactiveSay;
+            <pre class="highlight"><code>@Channel("kafka") Multi&lt;String&gt; events;
 
 @GET
 @Produces(MediaType.SERVER_SENT_EVENTS)
-public Publisher&lt;String&gt; stream() {
-    return reactiveSay;
+public Multi&lt;String&gt; events() {
+    return events;
 }</code></pre>
           </div>
         </div>
