Catch up l10n/override/ja_JP/_includes/header-navigation.html change

--- a/l10n/override/ja_JP/_includes/header-navigation.html
+++ b/l10n/override/ja_JP/_includes/header-navigation.html
@@ -1,3 +1,9 @@
+{% assign versioned_page = page.url | startswith: '/version/' %}
+{% if versioned_page %}
+  {% assign docversion = page.url | replace_regex: '^/version/([^/]+)/.*', '\1' %}
+{% else %}
+  {% assign docversion = 'latest' %}
+{% endif %}
 <div class="nav-wrapper">
   <div class="grid-wrapper">
     <div class="width-12-12">
