Address quarkus.io design update

--- a/l10n/override/ja_JP/_layouts/insights.html
+++ b/l10n/override/ja_JP/_layouts/insights.html
@@ -1,16 +1,8 @@
 ---
-layout: vision
+layout: base
 ---
-<div>
-    <div class="component-slim">
-      <div class="grid-wrapper">
-        <div class="width-12-12">
-          <h3 class="mt-0">Quarkus Insightsは、Quarkusのエコシステム内およびその周辺について、Quarkus 開発者がホストする定期的なビデオポッドキャストです。</h3>
-        </div>
-      </div>
-    </div>
-    {% include insights-band.html %}
-    {% include insights-videos.html %}
-  </div>
 
+{% include title-band.html %}
 
+{% include insights-band.html %}
+{% include insights-videos.html %}
