--- a/l10n/override/ja_JP/_layouts/quarkus2.html
+++ b/l10n/override/ja_JP/_layouts/quarkus2.html
@@ -1,15 +1,9 @@
 ---
-layout: vision
+layout: base
 ---
 
-<div>
-  <div class="component-slim">
-    <div class="grid-wrapper">
-      <div class="width-12-12">
-        <h3 class="mt-0">Quarkus 2.0は、新しい開発者ツールと改善されたパフォーマンスにより、JavaをKubernetesネイティブ開発に適したフレームワークにするという使命を継続します。</h3>
-      </div>
-    </div>
-  </div>
+{% include title-band.html %}
+
 <div class="full-width-bg white component awards-band">
   <div class="component-wrapper highlights-alternating-images-band">
 
@@ -17,8 +11,7 @@ layout: vision
         <div class="grid-wrapper">
       <div class="width-8-12 width-12-12-m block-content">
         <h2>フレームワーク効率</h2>
-        <p>
-            Quarkusは、Javaを超音速、素粒子、高速起動時間、低メモリフットプリントにします。このリリースは、ユーザーエクスペリエンスとパフォーマンスを向上させるために<a href="https://vertx.io/blog/whats-new-in-vert-x-4/" target="_blank">Vert.x 4</a>にアップグレードすることで、その使命を継続します。</p>
+        <p>Quarkusは、Javaを超音速、素粒子、高速起動時間、低メモリフットプリントにします。このリリースは、ユーザーエクスペリエンスとパフォーマンスを向上させるために<a href="https://vertx.io/blog/whats-new-in-vert-x-4/" target="_blank">Vert.x 4</a>にアップグレードすることで、その使命を継続します。</p>
       </div>
       <div class="width-4-12 width-12-12-m block-image">
         <img src="{{site.baseurl}}/assets/images/quarkus2/frameworkefficiency.png">
