Add some translations

--- a/l10n/override/ja_JP/_layouts/quarkus2.html
+++ b/l10n/override/ja_JP/_layouts/quarkus2.html
@@ -48,7 +48,7 @@ layout: base
         <img src="{{site.baseurl}}/assets/images/quarkus2/communitystandards.png">
       </div>
       <div class="width-8-12 width-12-12-m block-content">
-        <h2>コミュニティ & 標準</h2>
+        <h2>コミュニティ & 標準仕様</h2>
         <p>Quarkusはコミュニティで始まり、コミュニティで終わります。 これはプロジェクトの成熟期における画期的なリリースであり、470人を超える貢献者がプロジェクトの成功に貢献しています。 2.0以降、JDK11が最小バージョンになります。</p>
       </div>
     </div>
